test/fail/entitynulltype.app
//'Null' is not allowed
application test

entity User {
  authoredPapers : Null
}
